force-app/main/default/objects/RH_Request__c/fields/RH_Addressed_Cc__c.field-meta.xml
<CustomField>
    <fullName>RH_Addressed_Cc__c</fullName>
    <label>Addressed Cc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>