force-app/main/default/objects/RH_Request__c/fields/RH_Addressed_To__c.field-meta.xml
<CustomField>
    <fullName>RH_Addressed_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Addressed To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requests (Addressed To)</relationshipLabel>
    <relationshipName>Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>