force-app/main/default/objects/RH_Request__c/fields/RH_Answer__c.field-meta.xml
<CustomField>
    <fullName>RH_Answer__c</fullName>
    <label>Answer</label>
    <type>TextArea</type>
</CustomField>