force-app/main/default/objects/RH_Request__c/fields/RH_Comment__c.field-meta.xml
<CustomField>
    <fullName>RH_Comment__c</fullName>
    <label>Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>