force-app/main/default/objects/RH_Request__c/fields/RH_Complain_On__c.field-meta.xml
<CustomField>
    <fullName>RH_Complain_On__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complain_On</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requests (Complain_On)</relationshipLabel>
    <relationshipName>Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>