force-app/main/default/objects/RH_Request__c/fields/RH_Correct_Date__c.field-meta.xml
<CustomField>
    <fullName>RH_Correct_Date__c</fullName>
    <formula>IF( RH_Sumit_Day__c = 7 ,  RH_Submit_Date__c +2,  IF(RH_Sumit_Day__c = 1, RH_Submit_Date__c + 1, RH_Submit_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correct Date</label>
    <type>DateTime</type>
</CustomField>