force-app/main/default/objects/RH_Request__c/fields/RH_Date_Response__c.field-meta.xml
<CustomField>
    <fullName>RH_Date_Response__c</fullName>
    <label>Date Response</label>
    <type>Date</type>
</CustomField>