force-app/main/default/objects/RH_Request__c/fields/RH_Date_Submit__c.field-meta.xml
<CustomField>
    <fullName>RH_Date_Submit__c</fullName>
    <label>Date Submit</label>
    <type>Date</type>
</CustomField>