force-app/main/default/objects/RH_Request__c/fields/RH_Deadline_Time__c.field-meta.xml
<CustomField>
    <fullName>RH_Deadline_Time__c</fullName>
    <formula>HOUR( TIMENOW()) -  HOUR( TIMEVALUE(RH_Submit_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deadline Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>