force-app/main/default/objects/RH_Request__c/fields/RH_End_date__c.field-meta.xml
<CustomField>
    <fullName>RH_End_date__c</fullName>
    <label>End date</label>
    <type>DateTime</type>
</CustomField>