force-app/main/default/objects/RH_Request__c/fields/RH_Note__c.field-meta.xml
<CustomField>
    <fullName>RH_Note__c</fullName>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>