force-app/main/default/objects/RH_Request__c/fields/RH_Owner__c.field-meta.xml
<CustomField>
    <fullName>RH_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>