force-app/main/default/objects/RH_Request__c/fields/RH_Parent_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>RH_Parent_Request_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Request Id</label>
    <referenceTo>RH_Request__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>