force-app/main/default/objects/RH_Request__c/fields/RH_Reason__c.field-meta.xml
<CustomField>
    <fullName>RH_Reason__c</fullName>
    <label>reason</label>
    <type>TextArea</type>
</CustomField>