force-app/main/default/objects/RH_Request__c/fields/RH_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>RH_Request_Type__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Request Type</label>
    <type>Text</type>
</CustomField>