force-app/main/default/objects/RH_Request__c/fields/RH_RequestTypeName__c.field-meta.xml
<CustomField>
    <fullName>RH_RequestTypeName__c</fullName>
    <label>Request Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>