force-app/main/default/objects/RH_Request__c/fields/RH_Start_date__c.field-meta.xml
<CustomField>
    <fullName>RH_Start_date__c</fullName>
    <label>Start date</label>
    <type>DateTime</type>
</CustomField>