force-app/main/default/objects/RH_Request__c/fields/Rh_Status__c.field-meta.xml
<CustomField>
    <fullName>Rh_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Submited</fullName>
            </value>
            <value>
                <fullName>Responded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>