force-app/main/default/objects/RH_Request__c/fields/RH_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>RH_Submit_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Submit Date</label>
    <type>DateTime</type>
</CustomField>