force-app/main/default/objects/RH_Request__c/fields/RH_Sumit_Day__c.field-meta.xml
<CustomField>
    <fullName>RH_Sumit_Day__c</fullName>
    <formula>WEEKDAY(DATEVALUE(RH_Submit_Date__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sumit Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>