force-app/main/default/objects/RH_Request__c/recordTypes/Complain.recordType-meta.xml
<RecordType>
    <fullName>Complain</fullName>
    <active>true</active>
    <label>Complain</label>
</RecordType>