force-app/main/default/objects/RH_Request__c/recordTypes/Explanation.recordType-meta.xml
<RecordType>
    <fullName>Explanation</fullName>
    <active>true</active>
    <label>Explanation</label>
</RecordType>