force-app/main/default/objects/RH_Request__c/recordTypes/Holiday.recordType-meta.xml
<RecordType>
    <fullName>Holiday</fullName>
    <active>true</active>
    <label>Holiday</label>
</RecordType>