force-app/main/default/objects/RH_Request__c/recordTypes/Permisson.recordType-meta.xml
<RecordType>
    <fullName>Permisson</fullName>
    <active>true</active>
    <label>Permisson</label>
</RecordType>